Annotation processing needs to be enabled on newer JDKs